--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+Pip==23.0
 dash==2.8.1
 dash_bootstrap_components==1.3.1
 dash_pivottable==0.0.2
 numpy==1.21.6
-pandas==1.5.3
+pandas==1.3.5
 gunicorn
 dash-tools
